force-app/main/default/objects/G2Crowd__G2_Event__c/G2Crowd__G2_Event__c.object-meta.xml
<CustomObject>
    <label>G2 Event</label>
    <nameField>
        <label>G2 Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G2 Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>