force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Account__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>G2 Events</relationshipLabel>
    <relationshipName>G2_Events</relationshipName>
    <type>Lookup</type>
</CustomField>