force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>