force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Days_Ago__c</fullName>
    <label>Days Ago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>