force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__G2_ID__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_ID__c</fullName>
    <externalId>true</externalId>
    <label>G2 ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>