force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__G2_Visitor__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Visitor__c</fullName>
    <label>G2 Visitor</label>
    <referenceTo>G2Crowd__G2_Visiting_Organization__c</referenceTo>
    <relationshipLabel>G2 Events</relationshipLabel>
    <relationshipName>G2_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>