force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__IP__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__IP__c</fullName>
    <label>IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>