force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Logo_URLs__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Logo_URLs__c</fullName>
    <label>Logo URLs</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>