force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>