force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__Time__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>