force-app/main/default/objects/G2Crowd__G2_Event__c/fields/G2Crowd__URL__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>